@@ -3,7 +3,10 @@ package uz.project.auralife.services;
 import java.security.SecureRandom;
 import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
+
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -11,12 +14,17 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import uz.project.auralife.config.security.JwtProvider;
+import uz.project.auralife.controllers.auth.signin.SigninByEmailDto;
 import uz.project.auralife.controllers.auth.signup.ActivateRequestDTO;
 import uz.project.auralife.controllers.auth.signup.ConfirmResetPasswordDTO;
+import uz.project.auralife.controllers.dto.UserApiAuthDto;
 import uz.project.auralife.domains.ActivisationCode;
+import uz.project.auralife.domains.Photo;
+import uz.project.auralife.domains.Role;
 import uz.project.auralife.domains.enums.Apps;
 import uz.project.auralife.domains.enums.CodeTypes;
 import uz.project.auralife.repositories.ActivisationCodeRepository;
+import uz.project.auralife.repositories.PhotoRepository;
 import uz.project.auralife.responces.ExceptionResponse;
 import uz.project.auralife.responces.JwtResponse;
 import uz.project.auralife.domains.User;
@@ -40,22 +48,24 @@ public class AuthService {
     private final RoleRepository roleRepository;
     private final ActivisationCodeRepository activationCodeRepository;
     private final EmailService emailService;
+    private final PhotoRepository photoRepository;
     private CodeTypes codeType;
 
     @Value("${api.url}")
     private String link;
 
-    public User getUserEntity(SignupDto dto){
+    public User getUserEntity(SignupDto dto) {
         System.out.println(dto.phoneNumber());
         StringBuilder apps = new StringBuilder();
-        for(Apps app : Apps.values()){
-            if(dto.app().equals(app.toString())){
+        for (Apps app : Apps.values()) {
+            if (dto.app().equals(app.toString())) {
                 apps.append(app.toString());
             }
         }
         return User.builder()
                 .firstName(dto.firstName())
                 .lastName(dto.lastName())
+                .username(dto.username())
                 .email(dto.email())
                 .password(passwordEncoder.encode(dto.password()))
                 .phoneNumber(dto.phoneNumber())
@@ -65,6 +75,7 @@ public class AuthService {
                 .apps(apps.toString())
                 .build();
     }
+
     public static String generateCode(int length) {
         SecureRandom random = new SecureRandom();
         StringBuilder code = new StringBuilder();
@@ -75,77 +86,121 @@ public class AuthService {
         }
         return code.toString();
     }
-    public ResponseEntity<Response> signup(SignupDto dto)  {
+
+    public ResponseEntity<Response> signup(SignupDto dto) {
         CheckUserExistanceResponse userExistanceResponse = checkExistance(new CheckUserExistaceDto(dto.phoneNumber(), dto.email(), dto.username()));
 
         if (!userExistanceResponse.getExists()) {
             User user = getUserEntity(dto);
             if (user != null) {
-            user.setRoles(Collections.singletonList(roleRepository.findByName("USER").get()));
-            userRepository.save(user);
-            String token = jwtProvider.generate(user);
-            activationSender(dto.email(), CodeTypes.ACCOUNT_ACTIVISION);
-            return ResponseEntity.ok(new JwtResponse(token, "Activation code has been sent to your account."));
-        }
+                user.setProfilePictures(List.of(getOrCreateDefaultPhoto(dto.gender())));
+                rolesInit();
+                user.setRoles(Collections.singletonList(roleRepository.findByName("USER").get()));
+                userRepository.save(user);
+                String token = jwtProvider.generate(user);
+                activationSender(dto.email(), CodeTypes.ACCOUNT_ACTIVISION.getType());
+                return ResponseEntity.ok(new JwtResponse(token, "Activation code has been sent to your account."));
+            }
         }
         return new ResponseEntity<>(new ExceptionResponse("User already exists, change phone number or email or both",
-                                                            "", "Email or phone number is already exists",
-                                          "",""  ),HttpStatus.CONFLICT);
+                "", "Email or phone number is already exists",
+                "", ""), HttpStatus.CONFLICT);
     }
-    public ResponseEntity<JwtResponse> signin(SigninDto signinDto){
+@Value("${api.url}")
+private String apiUrl;
+    @Transactional
+    public Photo getOrCreateDefaultPhoto(String gender) {
+        // Normalize gender input
+        String purposeName = gender.equalsIgnoreCase("male") ? "Male" : "Female";
+        String fileName = gender.equalsIgnoreCase("male") ? "male.png" : "female.png";
+        String filePath = "src/main/resources/icons/" + fileName;
+
+        // Try to find existing photo ID without fetching the whole entity
+        Optional<Photo> existingId = photoRepository.findByPurposeName(purposeName);
+        if (existingId.isPresent()) {
+            return existingId.get();
+        }
+
+        // Create and save if not found
+        Photo saved = photoRepository.save(
+                new Photo(
+                        filePath,
+                        gender.toLowerCase(),
+                        apiUrl + "/photo/get?photoPath=" + filePath,
+                        "Auralife",
+                        purposeName
+                )
+        );
+        return saved;
+    }
+    public ResponseEntity<JwtResponse> signin(SigninDto signinDto) {
         Optional<User> user = userRepository.findByPhoneNumber(signinDto.phoneNumber());
-        if (user.isPresent() && passwordEncoder.matches(signinDto.password(), user.get().getPassword())){
+        if (user.isPresent() && passwordEncoder.matches(signinDto.password(), user.get().getPassword())) {
             String token = jwtProvider.generate(user.orElse(null));
             return new ResponseEntity<>(new JwtResponse(token), HttpStatus.OK);
         }
         return null;
     }
-    public JwtResponse refreshCode(User user){
-            String token = jwtProvider.generate(user );
-            return new JwtResponse(token);
+    public ResponseEntity<JwtResponse> signinByEmail(SigninByEmailDto signinDto) {
+        Optional<User> user = userRepository.findByEmail(signinDto.email());
+        if (user.isPresent() && passwordEncoder.matches(signinDto.password(), user.get().getPassword())) {
+            String token = jwtProvider.generate(user.get());
+            log.info("Token for user : "+user.get().getEmail()+" is :" + token);
+            return new ResponseEntity<>(new JwtResponse(token), HttpStatus.OK);
+        }
+        return null;
     }
+
+    public JwtResponse refreshCode(User user) {
+        String token = jwtProvider.generate(user);
+        return new JwtResponse(token);
+    }
+
     public Boolean checkExistanceByUserId(Long userId) {
         return userRepository.existsById(userId);
     }
+
     public CheckUserExistanceResponse checkExistance(CheckUserExistaceDto dto) {
-        if(dto.phoneNumber().isEmpty() && dto.email().isEmpty() && dto.username().isEmpty()){
-            return new CheckUserExistanceResponse(null, "Please enter a valid phone number or email",null);
+        if (dto.phoneNumber().isEmpty() && dto.email().isEmpty() && dto.username().isEmpty()) {
+            return new CheckUserExistanceResponse(null, "Please enter a valid phone number or email", null);
         }
-        if (!dto.phoneNumber().isEmpty()){
+        if (!dto.phoneNumber().isEmpty()) {
             String phoneNumber = dto.phoneNumber();
-            return  new CheckUserExistanceResponse(userRepository.existsByPhoneNumber(phoneNumber),"possible to sing in",phoneNumber);
+            return new CheckUserExistanceResponse(userRepository.existsByPhoneNumber(phoneNumber), "possible to sing in", phoneNumber);
 
         }
         if (!dto.email().isEmpty()) {
             String email = dto.email();
-            return  new CheckUserExistanceResponse(userRepository.existsByEmail(email),"email ",email);
+            return new CheckUserExistanceResponse(userRepository.existsByEmail(email), "email ", email);
         }
         if (!dto.username().isEmpty()) {
             String username = dto.username();
-            return  new CheckUserExistanceResponse(userRepository.existsByUsername(username),"username",username);
+            return new CheckUserExistanceResponse(userRepository.existsByUsername(username), "username", username);
         }
-        return new CheckUserExistanceResponse(false, "Phone number or email is free", dto.email()+" or "+dto.phoneNumber());
+        return new CheckUserExistanceResponse(false, "Phone number or email is free", dto.email() + " or " + dto.phoneNumber());
     }
+
     public ResponseEntity<?> activate(ActivateRequestDTO code) {
         Response response = new Response();
         activationCodeRepository.findByRecieverEmail(code.email()).ifPresent(activationCode -> {
-            if(activationCode.getCode().equals(code.code())&&checkExpiry(activationCode.getExpityDateTime())){
+            if (activationCode.getCode().equals(code.code()) && checkExpiry(activationCode.getExpityDateTime())) {
                 activationCodeRepository.delete(activationCode);
                 userRepository.updateStatusByEmail("active", activationCode.getRecieverEmail());
 
-                response.setMessage("Successfully activated account with email : "+code.email());
+                response.setMessage("Successfully activated account with email : " + code.email());
                 response.setStatus(200);
             } else {
                 if (!checkExpiry(activationCode.getExpityDateTime())) {
                     activationCodeRepository.delete(activationCode);
                 }
-                response.setMessage("Could not find user with or expired code : "+code.email());
+                response.setMessage("Could not find user with or expired code : " + code.email());
                 response.setStatus(404);
             }
-    });
+        });
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
-    private boolean checkExpiry( String expityDateTime) {
+
+    private boolean checkExpiry(String expityDateTime) {
         LocalDateTime expiry = LocalDateTime.parse(expityDateTime);
         return LocalDateTime.now().isBefore(expiry);
     }
@@ -158,30 +213,30 @@ public class AuthService {
 //            return ResponseEntity.ok(new Response(309,"Failed to generate activation code" ));
 //        }
         if (exists) {
-            activationSender(email, CodeTypes.PASSWORD_RESET);
+            activationSender(email, CodeTypes.PASSWORD_RESET.getType());
 
-            return ResponseEntity.ok("We have sent you email with code to : "+email+" check your email. ");
+            return ResponseEntity.ok("We have sent you email with code to : " + email + " check your email. ");
         }
-        return ResponseEntity.ok("User with email : "+email+" does not exist : Existance " + exists);
+        return ResponseEntity.ok("User with email : " + email + " does not exist : Existance " + exists);
 
     }
 
     public ResponseEntity<?> resetPassword(ConfirmResetPasswordDTO dto) {
         Response response = new Response();
         activationCodeRepository.findByRecieverEmail(dto.email()).ifPresent(activationCode -> {
-            if(activationCode.getCode().equals(dto.code())&&checkExpiry(activationCode.getExpityDateTime())){
+            if (activationCode.getCode().equals(dto.code()) && checkExpiry(activationCode.getExpityDateTime())) {
                 activationCodeRepository.delete(activationCode);
                 String password = passwordEncoder.encode(dto.password());
-                userRepository.updatePasswordByEmail(password, dto.email() );
+                userRepository.updatePasswordByEmail(password, dto.email());
 
-                response.setMessage("Successfully changed the password of account with email : "+dto.email());
+                response.setMessage("Successfully changed the password of account with email : " + dto.email());
                 response.setStatus(200);
-            }else {
+            } else {
                 if (!checkExpiry(activationCode.getExpityDateTime())) {
                     activationCodeRepository.delete(activationCode);
-                    response.setMessage("Failed to activate code has been expired of user : "+ dto.email());
-                }else{
-                    response.setMessage("Could not find user with email : "+ dto.email());
+                    response.setMessage("Failed to activate code has been expired of user : " + dto.email());
+                } else {
+                    response.setMessage("Could not find user with email : " + dto.email());
                     response.setStatus(404);
                 }
             }
@@ -190,25 +245,24 @@ public class AuthService {
     }
 
 
-
-    private Boolean activationSender(String email, CodeTypes type) {
+    private Boolean activationSender(String email, String type) {
         ActivisationCode activisationCode = new ActivisationCode(
                 email,
                 generateCode(6),
                 false,
                 LocalDateTime.now().plusMinutes(5l).toString(),
-                type.getType()
+                type
         );
-        String messageCode = "Your " + type.getType() +" code is "+activisationCode.getCode() +
-                "\n You can use this before expiry time of 5 minutes ends." + activisationCode.getExpityDateTime()+" ";
+        String messageCode = "Your " + type + " code is " + activisationCode.getCode() +
+                "\n You can use this before expiry time of 5 minutes ends." + activisationCode.getExpityDateTime() + " ";
         //                     emailMessage = emailService.sendActivationEmail(dto.email(), dto.firstName(), link + "/auth/activate?email=" + dto.email() + "&token=" + activisationCode + "&date" + LocalDateTime.now());
-        String emailMessage = emailService.sendEmail(email, email, messageCode+"\nGo to " + link +" To get access to JORASOFT");
+        String emailMessage = emailService.sendEmail(email, email, messageCode + "\nGo to " + link + " To get access to JORASOFT");
         activationCodeRepository.save(activisationCode);
         return true;
     }
 
     public ResponseEntity<?> activateSendAgain(String email, String type) {
-        if(type.equals(CodeTypes.ACCOUNT_ACTIVISION.getType())){
+        if (type.equals(CodeTypes.ACCOUNT_ACTIVISION.getType())) {
             if (userRepository.existsByEmailAndStatusIgnoreCase(email, "active")) {
                 return ResponseEntity.ok("You have already activated your account");
             }
@@ -217,17 +271,35 @@ public class AuthService {
         String expityDateTime = activeCode.get().getExpityDateTime();
         LocalDateTime expiry = LocalDateTime.parse(expityDateTime);
 
-        if (expiry.minusMinutes(3l).isAfter(LocalDateTime.now())) {}
+        if (expiry.minusMinutes(3l).isAfter(LocalDateTime.now())) {
+        }
         activeCode.ifPresent(activationCode -> {
 
             activationCodeRepository.delete(activationCode);
-            activationSender(email, codeType.getCodeType(type));
+            activationSender(email, type);
         });
-        return ResponseEntity.ok("We send " + type+" code "+"account with email : " + email);
+        return ResponseEntity.ok("We send " + type + " code " + "account with email : " + email);
     }
 
+    private boolean rolesInit() {
+        if (roleRepository.findByName("USER").isPresent()) {
+            return true;
+        }
+        roleRepository.save(new Role("USER", "AURALIFE"));
+        return true;
+    }
 
+//    @Value("${secret.key}")
+//    private String secretKey;
 
+//    public User getUserById( UserApiAuthDto dto) {
+//        if(dto.secretKey().equals(secretKey)) return userRepository.findById(dto.userId()).orElse(null);
+//        else return null;
+//    }
+
+    public Boolean userMatch(UserApiAuthDto dto) {
+        return passwordEncoder.matches( dto.password(),userRepository.findById(dto.userId()).get().getPassword());
+    }
 }
 
 
